Changelog
=========

1.2.1 - unreleased
------------------

- Respect the `types_not_searched` filter on the user profile. Closes #123.
  [hannosch]

- Resolve remaining problems with the employee listing and search, including
  catalog inconsistencies (#101, #104), Unicode problems (#103) and missing
  breadcrumbs (#116, #117, #118).
  [stefan, hannosch]

- Add missing mime types and enable gzip compression for web fonts.
  [hannosch]

- Enable click-jacking protection by preventing the site to be loaded inside
  a frame.
  [hannosch]

- Enable SSL session cache to support SSL session resumption. SSL sessions can
  be reused for up to 10 minutes.
  [hannosch]

- Added memory monitoring to Zope instances. If a Zope instance exceeds to use
  250mb of RSS memory, it will be restarted. This is checked every minute.
  [hannosch]

1.2.0 - 2011-03-15
------------------

- Update to collective.ATClamAV = 1.2 to fix network socket problems.
  [hannosch]

- Change the antivirus checks to run on the central jarn11 server instead of
  locally on each server.
  [hannosch]

- Use the fastest gzip compression on blob storage snapshots, as there's not
  much that can be compressed in binary data. Closes #197.
  [martior, hannosch]

- Add the option to specify a different buildout config file for a server.
  [martior, hannosch]

- Update to plone.app.discussion 1.0.
  [hannosch]

- Externalize the plutonian helpers into their own distribution and rewrite
  the upgrade tests to run against a real database - inspired by bestform.
  [hannosch]

- Remove collective.flag as it's not been used after all.
  [hannosch]

- Update to ZODB 3.10.2.
  [hannosch]

- Update to Plone 4.0.4 and Zope 2.12.16.
  [hannosch]

- Update to Varnish 2.1.5 and HAProxy 1.4.13.
  [hannosch]

- Added frontpage content highlight portlet, that allows a user to select an
  item to be shown in the portlet. Closes #186.
  [ggozad, hannosch]
