@@ -4,6 +4,10 @@ Changelog
 1.2.1 - unreleased
 ------------------
 
+- Sent authentication cookies only over secure connections. This refs
+  https://jira.jarn.com/browse/INTRANETT-135.
+  [hannosch]
+
 - Respect the `types_not_searched` filter on the user profile. Closes #123.
   [hannosch]
 
